JUnit 5 플러그인 프로젝트도 공통 부모 POM 바라보도록 변경
최초 작성시는 테스트 때문에 분리했지만, 지금 같이 사용해도 상관이 없다.